# Cargo-Management-System

./: README.md  main.py  pyproject.toml
app/: websocket.py
app/routes/: admin.py  auth.py  cargo.py  dashboard.py  driver.py  queue.py  users.py  vehicles.py
app/templates/: admin_history.html  approve_drivers.html  cargo_form.html  cargos.html  change_admin.html  dashboard.html  driver_cargo.html  driver_dashboard.html  driver_history.html  driver_profile.html  driver_queue.html  driver_vehicle_form.html  driver_vehicles.html  login.html  pending.html  queue.html  setup.html  user_form.html  users.html  vehicle_form.html  vehicles.html
data/: admin_history.json  cargos.json  notifications.json  queues.json  users.json  vehicles.json
